--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coalitions 42 Paris - The Federation Wins!</title>
+    <title>Coalitions 42 Paris !</title>
     <style>
         * {
             margin: 0;
